# solana-2

./: .gitignore
Find instruction task/: package-lock.json  package.json  transaction.ts
Solana bootcamp 2024/crud-app-2/: README.md  package-lock.json  package.json
Solana bootcamp 2024/new-nft/: create-collection.ts  create-nft.ts  package.json  verify-nft.ts
Solana bootcamp 2024/new-token/: bosRUtUm3Lc1Rg69mNmUfnfKg4TFMHWYY4TAh9hBePi.json  mntvc9dVW6YDaokqDva2r4Y71V1dB2ga3TPQd2XyTwk.json
Solana bootcamp 2024/swap/: Anchor.toml
Solana bootcamp 2024/token-lottery/: Anchor.toml  package-lock.json  package.json
Solana bootcamp 2024/token-vesting/: .prettierrc  package-lock.json  package.json
Solana bootcamp 2024/token-vesting/vesting/programs/vesting/: Cargo.toml
Solana bootcamp 2024/token-vesting/vesting/programs/vesting/src/: lib.rs
Solana bootcamp 2024/voting-dapp/: package-lock.json
ackee-task/: .gitignore
ackee-task/backend/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
ackee-task/backend/geyser/: config.json  libyellowstone_grpc_client.d  libyellowstone_grpc_client.rlib  libyellowstone_grpc_geyser.d  libyellowstone_grpc_proto.d
ackee-task/backend/src/: main.rs
ackee-task/backend/src/models/: library_model.rs  mod.rs  nft_model.rs  placed_bids_model.rs  winners_model.rs
ackee-task/backend/src/routes/: grpc_route.rs  mod.rs  transactions_route.rs
ackee-task/backend/src/services/: broker_service.rs  db_service.rs  grpc_service.rs  library_service.rs  mod.rs  nft_service.rs  placed_bids_service.rs  winners_service.rs
ackee-task/backend/src/structs/: mod.rs  transactions_struct.rs
(+308 files in other folders)
