[package]
name = "t"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.0"
chrono = { version = "0.4.42", features = ["serde"] }
deadpool-postgres = "0.14.1"
futures-util = "0.3.31"
postgres = "0.19.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-postgres = { version = "0.7.15", features = [
    "with-uuid-1",
    "with-chrono-0_4",
] }
env_logger = "0.10.0"
uuid = { version = "1.18.1", features = ["serde", "v7"] }
async-nats = "0.45.0"
clap = { version = "4.5.53", features = ["derive"] }
yellowstone-grpc-client = "10.1.1"
tonic = "0.14.2"
futures = "0.3.24"
yellowstone-grpc-proto = "10.1.1"
log = "0.4.28"
anyhow = "1.0.100"
maplit = "1.0.2"
tokio-stream = "0.1.17"
bs58 = "0.5.1"
borsh = "1.6.0"
base64 = "0.22.1"
